RESOLVED FIXED100154
Fix thread safety issue in AudioParamTimeline
https://bugs.webkit.org/show_bug.cgi?id=100154
Summary Fix thread safety issue in AudioParamTimeline
Chris Rogers
Reported 2012-10-23 12:55:06 PDT
Fix thread safety issue in AudioParamTimeline
Attachments
Patch (1.64 KB, patch)
2012-10-23 12:57 PDT, Chris Rogers
no flags
Chris Rogers
Comment 1 2012-10-23 12:57:09 PDT
Kenneth Russell
Comment 2 2012-10-23 13:10:35 PDT
Comment on attachment 170210 [details] Patch Looks OK.
WebKit Review Bot
Comment 3 2012-10-23 14:03:07 PDT
Comment on attachment 170210 [details] Patch Clearing flags on attachment: 170210 Committed r132259: <http://trac.webkit.org/changeset/132259>
WebKit Review Bot
Comment 4 2012-10-23 14:03:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.