Fix thread safety issue in AudioParamTimeline https://bugs.webkit.org/show_bug.cgi?id=100154

Reviewed by Kenneth Russell.

Add appropriate locking in AudioParamTimeline::valueForContextTime()

* Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::valueForContextTime):


Canonical link: https://commits.webkit.org/118174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132259 268f45cc-cd09-0410-ab3c-d52691b4dbfc